--- a/html/contact.html
+++ b/html/contact.html
@@ -37,7 +37,7 @@
         <a href="#contactMain">Skip to Main Content</a>
     </div>
     <header>
-        <nav>
+        <nav class="navBar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
