--- a/html/interests.html
+++ b/html/interests.html
@@ -37,7 +37,7 @@
         <a href="#hobbiesMain">Skip to Main Content</a>
     </div>
     <header>
-        <nav>
+        <nav class="navBar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
@@ -54,12 +54,90 @@
 
 
     <main class="interestsContainer" id="hobbiesMain">
-        <div class="favSets">
-            <h1>Favorite Dogs </h1>
-            <img src="../images/bigdoge.jpg" alt="Husky with Tongue out">
-            <p>Alaskan Malamute </p>
-            <img src="../images/doge.jpg" alt="Golden Retreiver">
-            <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
+        <h1>Interests</h1>
+        <div class="favSets1">
+            <h2>Favorite Dogs </h2>
+            <div class="image1">
+                <img src="../images/bigdoge.jpg" alt="Husky with Tongue out">
+                <div class="tempTitle">
+                    <p>Alaskan Malamute </p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Alaskan Malamute </p>
+                    <p>Insta accounts I follow</p>
+                    <p></p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Instagram Accounts
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Elvis Barkley</a></li>
+                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Boss</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
+
+            </div>
+            <div class="image2">
+                <img src="../images/doge.jpg" alt="Golden Retreiver">
+                <div class="tempTitle">
+                    <p>Golden Retreiver</p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Golden Retreiver </p>
+                    <p>Insta accounts I follow</p>
+                    <p></p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Instagram Accounts
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Elvis Barkley</a></li>
+                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Boss</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image3">
+                <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
+                <div class="tempTitle">
+                    <p>Samoyed </p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Samoyed </p>
+                    <p>Insta accounts I follow</p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Instagram Accounts
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Elvis Barkley</a></li>
+                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Boss</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- <div class="favSets">
@@ -68,19 +146,149 @@
             <img src="../images/overwatch2.jpg" alt="Overwatch 2">
             <img src="../images/valorant.jpg" alt="Valorant">
         </div> -->
-
-        <div class="favSets">
-            <h1> Sports</h1>
-            <img src="../images/block-m-feed.jpg" alt="Michigan Logo">
-            <img src="../images/pistons.jpg" alt="Detroit Pistons">
-            <img src="../images/lions.jpg" alt="Detroit Lions">
+        <div class="favSets2">
+            <h2>Favorite Sports</h2>
+            <div class="image1">
+                <img src="../images/block-m-feed.jpg" alt="Michigan Logo">
+                <div class="tempTitle">
+                    <p>Michigan Sports</p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Michigan Sports</p>
+                    <p>Favorite Highlights</p>
+                    <p></p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Highlights
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Elvis Barkley</a></li>
+                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Boss</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image2">
+                <img src="../images/pistons.jpg" alt="Detroit Pistons">
+                <div class="tempTitle">
+                    <p>Deeeeeeeeeetroit Basketball</p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Deetroit Basketball</p>
+                    <p>Favorite Highlights</p>
+                    <p></p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Highlights
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Elvis Barkley</a></li>
+                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Boss</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image3">
+                <img src="../images/lions.jpg" alt="Detroit Lions">
+                <div class="tempTitle">
+                    <p>Detroit Lions </p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Detroit Lions </p>
+                    <p>Favorite Highlights</p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Highlights
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Elvis Barkley</a></li>
+                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Boss</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="favSets">
-            <h1>Foods</h1>
-            <img src="../images/pasta.jpeg" alt="I love pasta">
-            <img src="../images/salmon.jpg" alt="Crispy Salmon">
-            <img src="../images/chicken.jpg" alt="Chicken Sandwich">
-            <p></p>
+        <div class="favSets3">
+            <h2>Favorite Foods</h2>
+            <div class="image1">
+                <img src="../images/pasta.jpeg" alt="I love pasta">
+                <div class="tempTitle">
+                    <p>Any Pasta</p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Pasta</p>
+                    <p>Top Pasta Dishes</p>
+                    <p></p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Rankings
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Chicken Alfredo</a></li>
+                            <li><a href="#">Lasangne</a></li>
+                            <li><a href="#">Carbonara</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image2">
+                <img src="../images/salmon.jpg" alt="Crispy Salmon">
+                <div class="tempTitle">
+                    <p>Salmon</p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Salmon</p>
+                    <p>Top Salmon Dishes</p>
+                    <p></p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Rankings
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Nigiri/Sashimi</a></li>
+                            <li><a href="#">Honey Glazed Salmon</a></li>
+                            <li><a href="#">Salmon Onigiri</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image3">
+                <img src="../images/chicken.jpg" alt="Chicken Sandwich">
+                <div class="tempTitle">
+                    <p>Chicken Sandwiches</p>
+                </div>
+                <div class="imageCaption" id="caption">
+                    <p>Chicken Sandwich</p>
+                    <p>Rankings</p>
+                    <div class="dropdown" id="dropdown">
+                        <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true">
+                            Rankings
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Popeyes</a></li>
+                            <li><a href="#">Chick fil A</a></li>
+                            <li><a href="#">Wingstop</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </main>
 
