--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <header>
-        <nav>
+        <nav class="navBar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
