--- a/html/projects.html
+++ b/html/projects.html
@@ -94,10 +94,11 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description2" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Worked on a web application called Tyler Cashiering creating new enhancements utilizing an Agile Methodology. </p>
+                            <p>Languages used: HTML, CSS, JS(Angular), .NET Core C#</p>
                         </div>
                         <div role="tabpanel" id="timeFrame2" class="tab-pane fade">
-                            <p>what</p>
+                            <p>May - August 2022</p>
                         </div>
                     </div>
                 </div>
@@ -117,10 +118,11 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description3" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Utilizing a public Itunes API, created a search application that displayed a variety of artist tracks</p>
+                            <p>Languages Used: HTML, CSS, JS(Vue) </p>
                         </div>
                         <div role="tabpanel" id="timeFrame3" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Completed Nov 20th 2022</p>
                         </div>
                     </div>
                 </div>
@@ -140,10 +142,11 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description4" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Created an Instagram clone in both server-side and client-side manners and deployed final site onto AWS</p>
+                            <p>Languages Used: HTML,CSS, Python, React, SQL</p>
                         </div>
                         <div role="tabpanel" id="timeFrame4" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Completed Oct 16th 2022</p>
                         </div>
                     </div>
                 </div>
@@ -166,10 +169,10 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description5" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Joining team of Full Stack Developers in Charlotte, NC. Looking to learning alot.</p>
                         </div>
                         <div role="tabpanel" id="timeFrame5" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Starting June 2023</p>
                         </div>
                     </div>
                 </div>
@@ -189,10 +192,11 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description6" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Custom Website made with Void Tech Consulting for local music tutoring service</p>
+                            <p>Languages Used: HTML, CSS, WordPress, PHP</p>
                         </div>
                         <div role="tabpanel" id="timeFrame6" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Completed April 2021</p>
                         </div>
                     </div>
                 </div>
@@ -212,10 +216,11 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description7" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Small mock office hours queue program using Linked Lists, first experience of parsing JSON files</p>
+                            <p>Languages Used: C++</p>
                         </div>
                         <div role="tabpanel" id="timeFrame7" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Completed March 2021</p>
                         </div>
                     </div>
                 </div>
@@ -235,10 +240,11 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description8" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Single Machine, multi-threaded server that executes user-submitted Map Reduce Jobs</p>
+                            <p>Languages Used: Python</p>
                         </div>
                         <div role="tabpanel" id="timeFrame8" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Completed Nov 15th 2022</p>
                         </div>
                     </div>
                 </div>
@@ -258,10 +264,10 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description9" class="tab-pane fade in active">
-                            <p>huh</p>
+                            <p>Scalable sereach engine similar to Google using a mock Wikipedia</p>
                         </div>
                         <div role="tabpanel" id="timeFrame9" class="tab-pane fade">
-                            <p>what</p>
+                            <p>Completed December 6th 2022</p>
                         </div>
                     </div>
                 </div>
