--- a/html/contact.html
+++ b/html/contact.html
@@ -56,7 +56,7 @@
         <div class="contactText">
             <h1>Contact Me</h1>
             <p>I'd Love to chat!</p>
-            <p></p>
+        </div>
 
         </div>
         <div class="contactForm">
