--- a/html/interests.html
+++ b/html/interests.html
@@ -88,7 +88,7 @@
                         <li><a href="#">Mooshie</a></li>
                         <li><a href="#">Boss</a></li>
                     </ul>
-
+                    <p>Reasoning:</p>
                     <p>Closest dog to a polar bear. Big fluffy doge </p>
                 </div>
 
@@ -115,6 +115,18 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
             </div>
             <div class="image3">
                 <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
@@ -136,6 +148,18 @@
                             <li><a href="#">Boss</a></li>
                         </ul>
                     </div>
+                </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
                 </div>
             </div>
         </div>
@@ -170,6 +194,18 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
             </div>
             <div class="image2">
                 <img src="../images/pistons.jpg" alt="Detroit Pistons">
@@ -193,6 +229,18 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
             </div>
             <div class="image3">
                 <img src="../images/lions.jpg" alt="Detroit Lions">
@@ -214,6 +262,17 @@
                             <li><a href="#">Boss</a></li>
                         </ul>
                     </div>
+                </div>
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
                 </div>
             </div>
         </div>
@@ -241,6 +300,18 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
             </div>
             <div class="image2">
                 <img src="../images/salmon.jpg" alt="Crispy Salmon">
@@ -264,6 +335,18 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
             </div>
             <div class="image3">
                 <img src="../images/chicken.jpg" alt="Chicken Sandwich">
@@ -286,7 +369,17 @@
                         </ul>
                     </div>
                 </div>
-
+                <div class="desktopView">
+                    <p>Alaskan Malamute</p>
+                    <p>Instagram Accounts I Follow</p>
+                    <ul>
+                        <li><a href="#">Elvis Barkley</a></li>
+                        <li><a href="#">Mooshie</a></li>
+                        <li><a href="#">Boss</a></li>
+                    </ul>
+                    <p>Reasoning:</p>
+                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                </div>
 
             </div>
         </div>
