--- a/html/projects.html
+++ b/html/projects.html
@@ -264,7 +264,8 @@
                     </ul>
                     <div class="tab-content">
                         <div role="tabpanel" id="description9" class="tab-pane fade in active">
-                            <p>Scalable sereach engine similar to Google using a mock Wikipedia</p>
+                            <p>Scalable search engine similar to Google using a mock Wikipedia database</p>
+                            <p>Languages Used: HTML, CSS, Python, SQL</p>
                         </div>
                         <div role="tabpanel" id="timeFrame9" class="tab-pane fade">
                             <p>Completed December 6th 2022</p>
