--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Home</title>
+    <script src='scripts/jquery.min.js'></script>
+    
 </head>
 
 <body>
@@ -103,6 +105,6 @@
         </div>
     </footer>
 </body>
-<script src="js/video.js"></script>
+<script src="js/scripts.js"></script>
 
 </html>
