--- a/html/interests.html
+++ b/html/interests.html
@@ -22,14 +22,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Interests</title>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-WMZNEEKSKK');
-    </script>
+    </script> -->
 </head>
 
 <body>
