--- a/html/projects.html
+++ b/html/projects.html
@@ -28,14 +28,14 @@
     <title>Projects</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-WMZNEEKSKK');
-    </script>
+    </script> -->
 </head>
 
 <body>
