--- a/html/contact.html
+++ b/html/contact.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WMZNEEKSKK');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,16 +30,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Contact</title>
-
-    <!-- Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-WMZNEEKSKK');
-    </script> -->
 </head>
 
 <body>
@@ -43,7 +42,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <a class="logo" href="../index.html">Kouki Hosoyachi</a>
+            <a class="logo"  id="navLogo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
