--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        gtag('config', 'G-WMZNEEKSKK');
-    </script>
+  gtag('config', 'G-WMZNEEKSKK');
+</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,22 +45,13 @@
                 <i class="fas fa-bars">&#8205</i>
             </label>
 
-            <a class="logo" href="index.html">Kouki Hosoyachi</a>
+            <a class="logo" id="navLogo" href="index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="html/projects.html">Projects</a></li>
                 <li><a href="html/interests.html">Interests</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
-            <!-- 
-            <div>
-                <input type="checkbox" class="checkbox" id="checkbox">
-                <label for="checkbox" class="checkbox-label">
-                <i class="fas fa-moon"></i>
-                <i class="fas fa-sun"></i>
-                <span class="ball"></span>
-                </label>
-            </div> -->
         </nav>
     </header>
 
