--- a/html/interests.html
+++ b/html/interests.html
@@ -54,7 +54,7 @@
 
 
     <main class="interestsContainer" id="hobbiesMain">
-        <h1>Interests</h1>
+        <h1 id="interestsTag">Interests</h1>
         <div class="favSets1">
             <h2>Favorite Dogs </h2>
             <div class="image1">
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="desktopView">
-                    <p>Alaskan Malamute</p>
+                    <p class="desktopTitle">Alaskan Malamute</p>
                     <p>Instagram Accounts I Follow</p>
                     <ul>
                         <li><a href="#">Elvis Barkley</a></li>
@@ -109,20 +109,18 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#">Elvis Barkley</a></li>
-                            <li><a href="#">Mooshie</a></li>
-                            <li><a href="#">Boss</a></li>
+                            <li><a href="#">Nala</a></li>
+                            <li><a href="#">Tucker</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="desktopView">
-                    <p>Alaskan Malamute</p>
+                    <p>Golden Retreiver</p>
                     <p>Instagram Accounts I Follow</p>
                     <ul>
-                        <li><a href="#">Elvis Barkley</a></li>
-                        <li><a href="#">Mooshie</a></li>
-                        <li><a href="#">Boss</a></li>
+                        <li><a href="#">AdventuringwithNala</a></li>
+                        <li><a href="#">Tuckerbudzyn</a></li>
                     </ul>
                     <p>Reasoning:</p>
                     <p>Closest dog to a polar bear. Big fluffy doge </p>
@@ -143,20 +141,19 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#">Elvis Barkley</a></li>
-                            <li><a href="#">Mooshie</a></li>
+                            <li><a href="#">Maya</a></li>
+                            <li><a href="#">Boomer</a></li>
                             <li><a href="#">Boss</a></li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="desktopView">
-                    <p>Alaskan Malamute</p>
+                    <p>Samoyed</p>
                     <p>Instagram Accounts I Follow</p>
                     <ul>
-                        <li><a href="#">Elvis Barkley</a></li>
-                        <li><a href="#">Mooshie</a></li>
-                        <li><a href="#">Boss</a></li>
+                        <li><a href="#">Maya Polar Bear</a></li>
+                        <li><a href="#">Boomer Land Cloud</a></li>
                     </ul>
                     <p>Reasoning:</p>
                     <p>Closest dog to a polar bear. Big fluffy doge </p>
@@ -173,7 +170,7 @@
         <div class="favSets2">
             <h2>Favorite Sports</h2>
             <div class="image1">
-                <img src="../images/block-m-feed.jpg" alt="Michigan Logo">
+                <img src="../images/block-m-feed.jpg" alt="Michigan Logo" id="michiganLogo">
                 <div class="tempTitle">
                     <p>Michigan Sports</p>
                 </div>
@@ -196,19 +193,19 @@
                 </div>
 
                 <div class="desktopView">
-                    <p>Alaskan Malamute</p>
-                    <p>Instagram Accounts I Follow</p>
+                    <p>Michigan Sports</p>
+                    <p>Favorite Highlights</p>
                     <ul>
-                        <li><a href="#">Elvis Barkley</a></li>
-                        <li><a href="#">Mooshie</a></li>
-                        <li><a href="#">Boss</a></li>
+                        <li><a href="#">Jordon Poole Clutch 3</a></li>
+                        <li><a href="#">Sad Ohio State Fans</a></li>
+                        <li><a href="#">2021 Ohio State Victory</a></li>
                     </ul>
                     <p>Reasoning:</p>
                     <p>Closest dog to a polar bear. Big fluffy doge </p>
                 </div>
             </div>
             <div class="image2">
-                <img src="../images/pistons.jpg" alt="Detroit Pistons">
+                <img src="../images/pistons.jpg" alt="Detroit Pistons" id="pistonsLogo">
                 <div class="tempTitle">
                     <p>Deeeeeeeeeetroit Basketball</p>
                 </div>
@@ -243,7 +240,7 @@
                 </div>
             </div>
             <div class="image3">
-                <img src="../images/lions.jpg" alt="Detroit Lions">
+                <img src="../images/lions.jpg" alt="Detroit Lions" id="lionsLogo">
                 <div class="tempTitle">
                     <p>Detroit Lions </p>
                 </div>
@@ -310,7 +307,7 @@
                         <li><a href="#">Boss</a></li>
                     </ul>
                     <p>Reasoning:</p>
-                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                    <p>Pretty much the only dish I can cook. </p>
                 </div>
             </div>
             <div class="image2">
@@ -370,15 +367,16 @@
                     </div>
                 </div>
                 <div class="desktopView">
-                    <p>Alaskan Malamute</p>
-                    <p>Instagram Accounts I Follow</p>
+                    <p>Chicken Sandwiches</p>
+                    <p>Rankings</p>
                     <ul>
-                        <li><a href="#">Elvis Barkley</a></li>
-                        <li><a href="#">Mooshie</a></li>
-                        <li><a href="#">Boss</a></li>
+                        <li><a href="#">Popeyes</a></li>
+                        <li><a href="#">Chick fil A</a></li>
+                        <li><a href="#">Wingstop</a></li>
                     </ul>
+                    <br>
                     <p>Reasoning:</p>
-                    <p>Closest dog to a polar bear. Big fluffy doge </p>
+                    <p>Chicken Sandwiches are so expensive but they taste so good.  </p>
                 </div>
 
             </div>
