--- a/html/projects.html
+++ b/html/projects.html
@@ -79,10 +79,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="desktopView">
-
-                </div>
+            <div class="desktopProjectsView">
+                <p>Description</p> 
+                <p>Worked as part of a small intern team</p>
+                <p>aksjflakfjskdlfd</p>
             </div>
             <div class="projectItems">
                 <p>Tyler Technologies Internship</p>
@@ -104,11 +106,12 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="desktopView">
-
-                </div>
             </div>
+
+            <div class="desktopProjectsView">
+                <p>aksjflakfjskdlfd</p>
+            </div>
+
             <div class="projectItems">
                 <p>Artist Search</p>
                 <img src="../images/itunes.png" alt="Itunes">
